<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffeee8"
    android:padding="5dp"
    tools:context=".ContactActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/textview"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/we_d_love_to_talk_with_you_about_your_next_project_drop_us_a_line_and_we_ll_get_to_you_within_two_days"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/want_to_hear_from_us_sooner_call_us"
            android:textSize="18sp" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_margin="5dp"

            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Know the Developer"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:src="@drawable/developer" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Bipin Singh"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="(Mobile Application Developer)"
                    android:textSize="20sp" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="Locate Us"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="206dp"
            android:layout_marginTop="10dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/CardView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/locationIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/location"
                    tools:ignore="ContentDescription,InefficientWeight" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textColorLink="#009688"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:translationX="10dp" />

                    <TextView
                        android:id="@+id/LocationDetails"
                        android:layout_width="353dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/myaddress"
                        android:textColorLink="#009688"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:translationX="10dp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/CardView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/emailIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/email"
                    tools:ignore="ContentDescription,InefficientWeight" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColorLink="#009688"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:translationX="10dp" />

                    <TextView
                        android:id="@+id/emailDetails"
                        android:layout_width="353dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/myemail"
                        android:textColorLink="#009688"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:translationX="10dp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/CardView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/CardView2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/callIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/call"
                    tools:ignore="ContentDescription,InefficientWeight" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/call"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/call"
                        android:textColorLink="#009688"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:translationX="10dp" />

                    <TextView
                        android:id="@+id/callDetails1"
                        android:layout_width="353dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/contact1"
                        android:textColorLink="#009688"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:translationX="10dp" />

                    <TextView
                        android:id="@+id/callDetails2"
                        android:layout_width="353dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/contact2"
                        android:textColorLink="#009688"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:translationX="10dp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/CardView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Send Your Query"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/editTextname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    tools:ignore="Autofill,LabelFor" />

                <EditText
                    android:id="@+id/editTextTextEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/e_mail"
                    android:inputType="textWebEmailAddress|textEmailAddress"
                    tools:ignore="Autofill,LabelFor" />

                <EditText
                    android:id="@+id/editTextTextPersonSubject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/subject"
                    android:inputType="textLongMessage"
                    tools:ignore="Autofill,LabelFor" />

                <EditText
                    android:id="@+id/editTextTextMultiLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/message"
                    android:inputType="textMultiLine"
                    tools:ignore="Autofill,LabelFor" />

                <Button
                    android:id="@+id/sendbutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="sendFeedback"
                    android:text="@string/send_message" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>
